# beatman

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: chart_hashes.rs  fsutil.rs  main.rs  ops.rs  table_loader.rs  utils.rs
src/ops/: check_table_coverage.rs  create_oldest_played_folder.rs  create_task_folder.rs  install_from_dir.rs  merge.rs  reconstruct.rs  rename.rs
