[package]
name = "beatman"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
log = "0.4.0"
env_logger = "0.8.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.5"
jwalk = "0.6"
rayon = "1.5"
clap = { version = "3.0.14", features = ["derive"] }
encoding_rs = "0.8.30"
regex = "1.5"
chrono = "0.4.19"

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]
