[package]
name = "beatman"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
log = "0.4.17"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
jwalk = "0.6"
rayon = "1.5"
clap = { version = "3.2.17", features = ["derive"] }
encoding_rs = "0.8.31"
regex = "1.6"
chrono = "0.4.22"
strum = "0.24.1"
strum_macros = "0.24.3"
md-5 = "0.10.6"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
